--- a/about.html
+++ b/about.html
@@ -42,6 +42,17 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
+                    <div class="owner-info">
+                        <h2>Meet Our Founder</h2>
+                        <div class="owner-card">
+                            <div class="owner-details">
+                                <h3>Amit Tharwani</h3>
+                                <p class="owner-title">Founder & Managing Director</p>
+                                <p class="owner-description">Leading JN Logistics with years of expertise in cold chain transportation and logistics management.</p>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <h2>Who We Are</h2>
                     <p>JN Logistics is a professional refrigerated van service provider specializing in cold chain transportation. We are dedicated to ensuring your perishable goods reach their destination in perfect condition, maintaining the required temperature throughout the journey.</p>
                     
