--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <span>JN LOGISTICS</span>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -37,8 +37,8 @@
                 <p class="hero-subtitle">Refrigerated Van Owners & Contractors</p>
                 <p class="hero-description">Professional cold chain transportation services for your perishable goods</p>
                 <div class="hero-buttons">
-                    <a href="contact.html" class="btn-primary">Get Quote</a>
-                    <a href="services.html" class="btn-secondary">Our Services</a>
+                    <a href="#contact" class="btn-primary">Get Quote</a>
+                    <a href="#services" class="btn-secondary">Our Services</a>
                 </div>
             </div>
             <div class="hero-image">
@@ -49,7 +49,196 @@
         </div>
     </section>
 
+    <!-- Services Section -->
+    <section id="services" class="services">
+        <div class="container">
+            <h2 class="section-title">Our Services</h2>
+            <div class="services-grid">
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-snowflake"></i>
+                    </div>
+                    <h3>Temperature Controlled Transport</h3>
+                    <p>Maintain optimal temperature for your perishable goods throughout the journey. Our refrigerated vans ensure your products stay fresh from pickup to delivery.</p>
+                    <ul class="service-features">
+                        <li><i class="fas fa-check"></i> Temperature monitoring</li>
+                        <li><i class="fas fa-check"></i> Multi-temperature zones</li>
+                        <li><i class="fas fa-check"></i> Real-time alerts</li>
+                    </ul>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-clock"></i>
+                    </div>
+                    <h3>24/7 Service</h3>
+                    <p>Round-the-clock availability for urgent deliveries and time-sensitive shipments. We understand that fresh goods can't wait.</p>
+                    <ul class="service-features">
+                        <li><i class="fas fa-check"></i> Emergency deliveries</li>
+                        <li><i class="fas fa-check"></i> Night transport</li>
+                        <li><i class="fas fa-check"></i> Weekend service</li>
+                    </ul>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-route"></i>
+                    </div>
+                    <h3>Flexible Routes</h3>
+                    <p>Customized delivery routes to meet your specific transportation needs. We adapt to your schedule and requirements.</p>
+                    <ul class="service-features">
+                        <li><i class="fas fa-check"></i> Custom routing</li>
+                        <li><i class="fas fa-check"></i> Multiple stops</li>
+                        <li><i class="fas fa-check"></i> Express delivery</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <!-- About Section -->
+    <section id="about" class="about">
+        <div class="container">
+            <div class="owner-info">
+                <h2>Meet Our Founder</h2>
+                <div class="owner-card">
+                    <div class="owner-details">
+                        <h3>Amit Tharwani</h3>
+                        <p class="owner-title">Founder & Managing Director</p>
+                        <p class="owner-description">Leading JN Logistics with years of expertise in cold chain transportation and logistics management.</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="about-content">
+                <div class="about-text">
+                    <h2>About JN Logistics</h2>
+                    <p>We are professional refrigerated van owners and contractors specializing in cold chain transportation. Our modern fleet ensures your perishable goods reach their destination in perfect condition.</p>
+                    <div class="features-grid">
+                        <div class="feature">
+                            <i class="fas fa-truck"></i>
+                            <h4>Modern Fleet</h4>
+                            <p>State-of-the-art refrigerated vehicles equipped with advanced temperature control systems</p>
+                        </div>
+                        <div class="feature">
+                            <i class="fas fa-user-tie"></i>
+                            <h4>Experienced Team</h4>
+                            <p>Professional drivers with extensive experience in handling temperature-sensitive cargo</p>
+                        </div>
+                        <div class="feature">
+                            <i class="fas fa-map-marked-alt"></i>
+                            <h4>Real-time Tracking</h4>
+                            <p>GPS tracking system for complete visibility of your shipment throughout the journey</p>
+                        </div>
+                        <div class="feature">
+                            <i class="fas fa-certificate"></i>
+                            <h4>Quality Assurance</h4>
+                            <p>Strict adherence to cold chain standards and quality control procedures</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="about-image">
+                    <div class="image-placeholder">
+                        <i class="fas fa-truck-loading"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Stats Section -->
+    <section class="stats-section">
+        <div class="container">
+            <div class="stats-grid">
+                <div class="stat-item">
+                    <div class="stat-number">5+</div>
+                    <div class="stat-label">Years Experience</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-number">500+</div>
+                    <div class="stat-label">Successful Deliveries</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-number">24/7</div>
+                    <div class="stat-label">Service Availability</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-number">100%</div>
+                    <div class="stat-label">Customer Satisfaction</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2 class="section-title">Contact Us</h2>
+            <div class="contact-content">
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <div class="contact-icon">
+                            <i class="fas fa-phone"></i>
+                        </div>
+                        <div class="contact-details">
+                            <h4>Phone Numbers</h4>
+                            <p><a href="tel:+919924848030">+91 9924848030</a></p>
+                            <p><a href="tel:+919924848039">+91 9924848039</a></p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <div class="contact-icon">
+                            <i class="fas fa-envelope"></i>
+                        </div>
+                        <div class="contact-details">
+                            <h4>Email</h4>
+                            <p><a href="mailto:jnlogistics2506@gmail.com">jnlogistics2506@gmail.com</a></p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <div class="contact-icon">
+                            <i class="fas fa-map-marker-alt"></i>
+                        </div>
+                        <div class="contact-details">
+                            <h4>Address</h4>
+                            <p>E-201, Narayan Avenue,<br>Bhat, Gandhinagar - 382428</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact-form">
+                    <h3>Send Us A Message</h3>
+                    <form action="https://formspree.io/f/xpwaqjko" method="POST">
+                        <div class="form-row">
+                            <div class="form-group">
+                                <input type="text" name="name" placeholder="Your Name" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="email" name="email" placeholder="Your Email" required>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group">
+                                <input type="tel" name="phone" placeholder="Your Phone" required>
+                            </div>
+                            <div class="form-group">
+                                <select name="service" required>
+                                    <option value="">Service Type</option>
+                                    <option value="temperature-controlled">Temperature Controlled Transport</option>
+                                    <option value="emergency">Emergency Delivery</option>
+                                    <option value="contract">Contract Services</option>
+                                    <option value="other">Other</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <textarea name="message" placeholder="Your Message / Requirements" rows="6" required></textarea>
+                        </div>
+                        <input type="hidden" name="_next" value="thank-you.html">
+                        <input type="hidden" name="_subject" value="New Inquiry - JN Logistics">
+                        <button type="submit" class="btn-primary">Send Message</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
