--- a/thank-you.html
+++ b/thank-you.html
@@ -6,20 +6,36 @@
     <title>Thank You - JN Logistics</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <style>
+        /* Logo Styling */
+        .company-logo {
+            height: 60px;
+            width: auto;
+            object-fit: contain;
+            margin-right: 10px;
+        }
+
+        .footer-logo img {
+            height: 50px;
+            width: auto;
+            margin-right: 12px;
+            vertical-align: middle;
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <i class="fas fa-truck-moving"></i>
+                <img src="jn.jpg" alt="JN Logistics Logo" class="company-logo">
                 <span>JN LOGISTICS</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -39,7 +55,7 @@
                 </div>
                 <div class="thank-you-buttons">
                     <a href="index.html" class="btn-primary">Back to Home</a>
-                    <a href="services.html" class="btn-secondary">View Services</a>
+                    <a href="index.html#services" class="btn-secondary">View Services</a>
                 </div>
             </div>
         </div>
@@ -50,7 +66,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <i class="fas fa-truck-moving"></i>
+                    <img src="jn.jpg" alt="JN Logistics Logo">
                     <span>JN LOGISTICS</span>
                 </div>
                 <p>&copy; 2024 JN Logistics. All rights reserved.</p>
